--- a/pag3.html
+++ b/pag3.html
@@ -60,7 +60,7 @@
 <li class="list_toilet">18 de Marzo de 2024: Se inaguraron los regalos a cada uno de los cumpleañeros de la institución, única escuela en el país en tenerlo en cuenta.
 </li>
 <li class="list_toilet">5 de Abril de 2024: Homenaje a los ex combatientes de Malvinas del distrito de Monte.</li>
-
+<li class="list_toilet">Proximamente se agregará un Kiosco.</li>
 
 
 </div>
