--- a/pag2.html
+++ b/pag2.html
@@ -64,7 +64,7 @@
                     <fieldset class="info_extra"> <legend class="description_extra"> Información Extra</legend>
                     <textarea name="mensaje" placeholder="Tu Mensaje" required></textarea> </fieldset>
                     <button type="submit">Enviar</button>
-                    <textarea name="Informacion" id="infoform"  disabled> Esto está deshabilitado por ahora dada la falta de presupuesto, pero queda fachero dejarlo asi. En un futuro servirá para comunicar sugerencias y/o preguntas.</textarea>
+                    <textarea name="Informacion" id="infoform"  disabled>Esto está deshabilitado por ahora. En un futuro servirá para comunicar sugerencias y/o preguntas.</textarea>
                 </form>
             </section>
             
