--- a/pag4.html
+++ b/pag4.html
@@ -29,7 +29,7 @@
                         <li class="menu-options"><a href="pag2.html">Información</a></li>
                         <li class="menu-options"><a href="pag3.html">Proyectos de la escuela</a></li>
                         <li class="menu-options"><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjI7o_5hZuEAxXVlJUCHQmaBtsQFnoECA8QAQ&url=https%3A%2F%2Fes.wikipedia.org%2Fwiki%2FAbbott&usg=AOvVaw1la1ntmxk71N5EvC6CqIH_&opi=89978449">Página de Wikipedia de el pueblo</a></li>
-                <li class="logo"> <img src="logotransparente.png " width="125px" title="Logo de la escuela"> </li>
+                <li class="logo"> <img src="logo.png " width="125px" title="Logo de la escuela"> </li>
          
          
                 <!-- Modo Oscuro 
